<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/anotherExampleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:padding="@dimen/padding_10"
                    android:text="@string/show_another_example" />
            </LinearLayout>

            <EditText
                android:id="@+id/fullName_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:background="#000"
                android:hint="@string/enter_fullName"
                android:inputType="text"
                android:padding="@dimen/padding_10"
                android:textColor="#FFF"
                android:textColorHint="#fff"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/age_edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:background="#000"
                android:hint="@string/enter_age"
                android:inputType="number"
                android:padding="@dimen/padding_10"
                android:textColor="#FFF"
                android:textColorHint="#fff"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/click_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:padding="@dimen/padding_10"
                android:text="@string/click_btn" />

            <EditText
                android:id="@+id/edtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/enter_text"
                android:inputType="text"
                android:padding="@dimen/padding_10" />

            <TextView
                android:id="@+id/show_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/plain_text_input"
                android:inputType="text"
                android:padding="@dimen/padding_10" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_maxlegth_of_5_for_edittext" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/email_address_input"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/phone_number_input"
                android:inputType="phone"
                android:padding="@dimen/padding_10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/number_input"
                android:inputType="number"
                android:padding="@dimen/padding_10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/signed_number_input"
                android:inputType="numberSigned"
                android:padding="@dimen/padding_10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/decimal_number_input"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding_10" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>
